<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FragmentLogin">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/FRGContainerPadding"
        >
        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"

            />
        <TextView
            android:id="@+id/TXV_FRGLogin_Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/FRGLogin_Title"
            android:textSize="@dimen/FRGTitleTextSize"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginBottom="30dp"
            />
        <TextView

            android:id="@+id/TXV_FRGLogin_UserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/FRGLogin_TXVUserName"
            android:textSize="@dimen/FRGLabelTextSize"
            />
        <EditText
            android:id="@+id/ETX_FRGLogin_Username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/FRGLogin_ETXUsername"
            android:textSize="@dimen/FRGEditTextSize"
            android:inputType="text"
            android:layout_marginBottom="16dp"
            />
        <TextView

            android:id="@+id/TXV_FRGLogin_Password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/FRGLogin_TXVPassword"
            android:textSize="@dimen/FRGLabelTextSize"
            />
        <EditText
            android:id="@+id/ETX_FRGLogin_Password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/FRGLogin_ETXPassword"
            android:textSize="@dimen/FRGEditTextSize"
            android:inputType="textPassword"
            android:layout_marginBottom="16dp"
            />
        <TextView

            android:id="@+id/TXV_FRGLogin_RecoverPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/FRGLogin_TXVRecoverPassword"
            android:clickable="true"
            android:focusable="true"
            android:textSize="@dimen/FRGTextView2TextSize"
            android:layout_marginBottom="30dp"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            />
        <Button
            android:id="@+id/BTN_FRGLogin_Login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/FRGLogin_BTNLogin"
            android:textSize="@dimen/FRGButtonTextSize"
            android:textStyle="bold"

            />
        <Button
            android:id="@+id/BTN_FRGLogin_Register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/FRGLogin_BTNRegister"
            android:textSize="@dimen/FRGButtonTextSize"
            android:textStyle="bold"

            />
        </LinearLayout>
</ScrollView>